# curvature

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
include/: mesh.hpp  stl_reader.hpp
src/: main.cpp  mesh.cpp  stl_reader.cpp
